Removing border-bottom from products loop and fixing margins and spacings on tabs and blog

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -272,7 +272,7 @@ body {
 
 
 .latest-products, .products-row {
-    border-bottom: 4px double @brand-primary;
+    // border-bottom: 4px double @brand-primary;
     margin-bottom: 3%;
 
     .page-header {
@@ -357,6 +357,8 @@ body {
 }
 
 .blog-section {
+    margin-top: 80px;
+
     .blog-title {
         h2 {
             font-family: @font-family-serif;
@@ -465,6 +467,7 @@ body {
 }
 
 .tabs {
+    margin-top: -5px;
     background-color: @gray-lighter;
     height: 5vw;
     display: block;
